# cursed-stats

./: README.md  docker-compose.yml
data/: cpu_metrics.csv  gen_data.py  memory_metrics.csv  network_metrics.csv
data/subsystem/: disk_metrics.csv
importer/: .import_cache.json  Cargo.toml  Dockerfile
importer/src/: main.rs
src/: main.rs
