[package]
name = "importer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
walkdir = "2.4.0"
csv = "1.3.0"
influxdb = { version = "0.7.1", features = ["derive"] }
anyhow = "1.0.80"
serde = { version = "1.0.196", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde", "clock"] }
clap = { version = "4.5.2", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
pretty_env_logger = "0.5.0"
log = "0.4.20"

[[bin]]
name = "importer"
path = "src/main.rs"
